# NaturalSQL

./: .gitignore  MANIFEST.in  README.md  README_SPANISH.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: publish.yml  tests.yml
app/: main.py  skills-lock.json
app/.agents/skills/beautiful-desing/: SKILL.md
app/backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
app/backend/api/: router.py
app/backend/api/routes/: auth.py  health.py
app/backend/api/routes/v1/: chat.py
app/backend/controller/: chat_controller.py
app/backend/dependencies/: auth.py
app/backend/schemas/: __init__.py  auth.py  chat.py  health.py
app/backend/services/: chat_service.py  firebase_auth.py  firestore_user_service.py
app/backend/vector_db/: vectors.db
app/client/: .dockerignore  Dockerfile  index.html  package.json  tsconfig.app.json  vite.config.ts
app/client/nginx/: default.conf
app/client/src/: main.tsx
app/client/src/components/: TypingIndicator.tsx
app/client/src/components/ui/: Callout.tsx  ChatButton.tsx  ChatTable.tsx  ChatTextarea.tsx  CodeBlock.tsx  CommandCard.tsx  GitHubProjectBadge.tsx  Hero.tsx  Section.tsx  Sidebar.tsx  StepCard.tsx  Tabs.tsx  Topbar.tsx
app/client/src/config/: apiBase.ts
app/client/src/hooks/: useChat.ts  useGitHubProject.ts
app/client/src/layout/: Footer.tsx  Header.tsx  Layout.tsx
app/client/src/pages/: About.tsx  Chat.tsx  Documentation.tsx
app/client/src/routes/: route.tsx
app/client/src/storage/: AuthBootstrap.tsx  authStore.ts  firebase.ts
app/controller/: controllervector.py
app/docs/: backend_strcuture.excalidraw
app/proxy/: Dockerfile  README.md  nginx.conf.template
app/sql/: sqlconecctions.py  sqlquerys.py  sqlschema.py
app/utils/: config.py  constans.py  prompt.py
naturalsql/: __init__.py  api.py
naturalsql/controller/: controllervector.py
naturalsql/sql/: sqlconecctions.py  sqlquerys.py  sqlschema.py
naturalsql/utils/: config.py  constans.py  prompt.py
naturalsql/vector/: __init__.py  factory.py
naturalsql/vector/providers/: __init__.py  base.py  gemini.py  local.py
naturalsql/vector/stores/: __init__.py  base.py  chroma_store.py  sqlite_store.py
test/: README.md
test/connection/: test_sqlconnections.py
test/schema/: test_sqlschema.py
test/vector_manager/: test_controllervector.py
