[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naturalsql"
version = "0.2.0"
description = "Generate SQL from natural language using DB schema + vector retrieval"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "NaturalSQL Contributors" }
]
dependencies = [
  "chromadb>=0.5.0",
  "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
postgresql = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.1.0"]
sqlserver = ["pyodbc>=5.1.0"]
all-db = [
  "psycopg2-binary>=2.9.0",
  "pymysql>=1.1.0",
  "pyodbc>=5.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["naturalsql*"]

[tool.setuptools.package-data]
naturalsql = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = [
  "*.env",
  "main.py",
  "requirements.txt",
  "__pycache__",
]
