[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naturalsql-backend"
version = "0.1.0"
description = "NaturalSQL FastAPI backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.135.3",
  "uvicorn==0.35.0",
  "firebase_admin==7.4.0",
  "naturalsql==1.2.5",
  "nolimit_ai==0.1.1",
  "psycopg2==2.9.11",
  "pydantic==2.13.0",
  "python-dotenv==1.2.2",
  "slowapi==0.1.9",
  "google-genai>=1.70.0"
]
